# routes/studentRoutes.js
@@ -1,8 +1,15 @@
 const express = require("express");
-const {addStudent,getStudentByEmail} = require("../controller/studentController");
+const {addStudent,getStudentByEmail,getAllStudent} = require("../controller/studentController");
 
-const routes = express.Router();
+const routes = express.Router(); 
 
-routes.route("/").post(addStudent);
-routes.route("/:email").get(getStudentByEmail);
+routes.route("/").post(
+     // #swagger.tags = ['Students']
+    addStudent);
+routes.route("/:email").get(
+    // #swagger.tags = ['Students']
+    getStudentByEmail);
+routes.route("/").get(
+    // #swagger.tags = ['Students']
+    getAllStudent);
 module.exports= routes;
